src/test/invalid/semanticErr/extensionTests/classes/classConstructorDifferentName.wacc
# Constructor name must match class name

begin
  class Apple() is
      string colour;

      Car(string c) is
        colour = c
      end

      string getColour() is
        return colour
      end
  end

  int x = 1;
  println x
end
